update header template

--- a/head.html
+++ b/head.html
@@ -1,9 +1,12 @@
 <meta charset="UTF-8">
 <script>
-  window.config = {
-    ln: 1,
-    spliter: /第.{1,6}章/gm,
-  };
+	window.config = {
+		ln: 1,
+		spliter: /第.{1,6}章/gm,
+	};
+	window.strs = [
+		[/回放/g, '重播', ],
+	];
 </script>
 <script defter src="./txt-reader/page2.js"></script>
 <link rel="stylesheet" href="./txt-reader/page2.css">
