--- a/head.html
+++ b/head.html
@@ -2,7 +2,7 @@
 <script>
 	window.config = {
 		ln: 1,
-		spliter: /第.{1,6}章/gm,
+		spliter: /^第.{1,6}章 /gm,
 	};
 	window.strs = [
 		[/回放/g, '重播', ],
